[package]
name = "semi-implicit-euler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9" }

# When building release, run `cargo build --release --no-default-features`
[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic"]
# Trick from: https://stackoverflow.com/questions/69428144/can-i-activate-a-dependencys-feature-only-for-debug-profile

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
